--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<html>
+  <head>
+  <title>
+Welcome to Webpage
+  </title>
+  </head>
+  <body>
+    <h1> Welcome to web1</h1>
+    <h2> Welcome to web2</h2>
+    <h3> Welcome to web3</h3>
+    <h4> Welcome to web4</h4>
+    <h5> Welcome to web5</h5>
+    <h6> Welcome to web6</h6>
+      </body>
+</html>
