--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ Welcome to Webpage
     <h5> Welcome to web5</h5>
     <h6> Welcome to web6</h6>
     <p style=" text-align: ceter;">fdsfsdasdsd</p>
-    <img src="/pexels-photo-414612.jpeg">
+    <img src="pexels-photo-414612.jpeg">
       </body>
 </html>
