--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ Welcome to Webpage
     <h5> Welcome to web5</h5>
     <h6> Welcome to web6</h6>
     <p style=" text-align: ceter;">fdsfsdasdsd</p>
-    <img src="1.jpeg">
+    <img src="https://hiteshgarg9897.github.io/hiteshgithub1/1.jpeg1.jpeg">
       </body>
 </html>
